infrastructure-collections/k3s-ngf-1c-1n-dev/04-platform-routes/chatter-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatter-backend-route
  namespace: chatter-dev
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /  # Strips '/resend' and replaces it with '/'
      backendRefs:
        - name: chatter-backend-service
          port: 80 # The port exposed by your Backend Service
